[#12241] Apply Primitive Containers to optimize memory usage